# bitmako

./: .gitattributes  .gitignore  BENCHMARKS.md  Cargo.toml  PROMPT.md.md  README.md
.cargo/: config.toml
.claude/: launch.json
benches/: etl_bench.rs  search_bench.rs
deploy/: README.md  bitmako-demo.service  nginx-bitmako.conf
src/: api.rs  error.rs  lib.rs  main.rs
src/etl/: fingerprint.rs  mod.rs  parser.rs  properties.rs  reader.rs  writer.rs
src/index/: block_max.rs  builder.rs  mod.rs  posting_list.rs  skip.rs
src/search/: analysis.rs  fp_store.rs  lance_lookup.rs  mod.rs  prop_store.rs  query.rs  scaffold.rs  tanimoto.rs  wand.rs
static/: index.html
tests/: data_validation.rs  performance_regression.rs  pipeline_integration.rs  regression_golden_fingerprints.rs  search_correctness.rs
tests/common/: mod.rs
